# zeptocapsule

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.dev  Dockerfile.firecracker  README.md  TODO.md
.github/workflows/: ci.yml
crates/zk-guest/: Cargo.toml
crates/zk-guest/src/: agent.rs  init.rs  lib.rs  main.rs  worker.rs
crates/zk-host/: Cargo.toml
crates/zk-host/src/: backend.rs  capsule.rs  cgroup.rs  lib.rs  main.rs  namespace_backend.rs  process_backend.rs  supervisor.rs  vm_config.rs
crates/zk-host/tests/: namespace_backend.rs  process_backend.rs
crates/zk-proto/: Cargo.toml
crates/zk-proto/src/: lib.rs
docs/: firecracker-deployment.md
docs/plans/: 2026-03-08-kernel-redesign-impl.md  2026-03-08-kernel-redesign.md  2026-03-08-kernel-refactor-retrospective.md  2026-03-08-m3-namespace-implementation.md  2026-03-08-m3-namespace-isolation-design.md  2026-03-08-m4-zeptopm-integration-design.md  2026-03-08-m4-zeptopm-integration-impl.md  2026-03-08-m6-firecracker-backend-design.md  2026-03-08-m6-firecracker-backend-impl.md  2026-03-08-security-hardening-design.md  2026-03-08-security-hardening-impl.md  2026-03-08-zeptokernel-design.md  2026-03-09-runtime-robustness-design.md  2026-03-09-runtime-robustness-impl.md
examples/: e2e_namespace.rs  e2e_process.rs
scripts/: build-fc-rootfs.sh  manual-fc-test.sh  test-firecracker.sh  test-linux.sh
src/: backend.rs  cgroup.rs  firecracker.rs  firecracker_api.rs  init_shim.rs  lib.rs  namespace.rs  probe.rs  process.rs  rootfs.rs  seccomp.rs  types.rs  vsock.rs  workspace_image.rs
tests/: firecracker_backend.rs  namespace_backend.rs  process_backend.rs
