[workspace]
resolver = "3"
members = [
  "crates/zk-proto",
  "crates/zk-host",
  "crates/zk-guest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/qhkm/zeptokernel"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "time", "sync", "fs", "io-util", "io-std", "net", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
