[package]
name = "zeptocapsule"
description = "Thin sandbox library for isolated Zepto worker execution"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/qhkm/zeptocapsule"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "time", "sync", "fs", "io-util", "io-std", "net", "process"] }
thiserror = "2"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "process", "user", "signal"] }
