[package]
name = "zk-host"
description = "ZeptoKernel host supervisor — launches and manages execution capsules"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zk-host"
path = "src/main.rs"

[dependencies]
zk-proto = { path = "../zk-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
